styles: correct next section overlapping

--- a/src/components/SplashViz/SplashViz.scss
+++ b/src/components/SplashViz/SplashViz.scss
@@ -5,7 +5,7 @@
 .splash-viz {
   position: relative;
   height: calc(100vh - 56px);
-  min-height: 320px;
+  min-height: 425px;
   max-height: 720px;
   background: getColor(elephant);
   display: grid;
